--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=1234
 spring.datasource.username=root
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.liug.black.model.entity
+mybatis.config-location=classpath:mybatis/mybatis.xml
 #redis
 spring.redis.host=192.168.31.188
 spring.redis.port=6379
