增加mybatis的日志监控设置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.username=root
 mybatis.mapper-locations=classpath:mybatis/*.xml
 mybatis.type-aliases-package=com.liug.model.entity
 mybatis.configuration.mapUnderscoreToCamelCase=true
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #redis
 spring.redis.host=192.168.31.188
