--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ logging.level.org.springframework.web=INFO
 
 #databse
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://106.14.195.115:3306/yuya?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://172.19.2.220:3306/yuya?useUnicode=true&characterEncoding=utf-8
 spring.datasource.url=jdbc:mysql://192.168.31.188:3306/yuya?useUnicode=true&characterEncoding=utf-8
 spring.datasource.password=1234
 spring.datasource.username=root
@@ -14,6 +16,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #redis
+#spring.redis.host=106.14.195.115
+#spring.redis.host=172.19.2.220
 spring.redis.host=192.168.31.188
 spring.redis.port=6379
 spring.redis.maxTotal=20
