--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 设置日志级别
-logging.level.org.springframework.web=INFO
+logging.level.*=DEBUG
 
 #databse
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -18,7 +18,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #redis
 #spring.redis.host=106.14.195.115
 #spring.redis.host=172.19.2.220
-spring.redis.host=192.168.31.188
+spring.redis.host= 192.168.31.188
+#spring.redis.host= 127.0.0.1
 spring.redis.port=6379
 spring.redis.maxTotal=20
 spring.redis.maxIdle
