--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
-        <!--整合redis-->
+        <!--整合redis
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
+        </dependency>-->
         <!--整合mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
