--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,10 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #redis
 #spring.redis.host=106.14.195.115
 #spring.redis.host=172.19.2.220
-spring.redis.host= 192.168.31.188
+#spring.redis.host= 192.168.31.188
 #spring.redis.host= 127.0.0.1
-spring.redis.port=6379
-spring.redis.maxTotal=20
-spring.redis.maxIdle
-spring.redis.maxWaitMillis
-spring.redis.testOnBorrow=
+#spring.redis.port=6379
+#spring.redis.maxTotal=20
+#spring.redis.maxIdle
+#spring.redis.maxWaitMillis
+#spring.redis.testOnBorrow=
