--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ logging.level.*=DEBUG
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://106.14.195.115:3306/yuya?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://172.19.2.220:3306/yuya?useUnicode=true&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://192.168.31.188:3306/yuya?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://192.168.31.188:3306/yuya?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yuya?useUnicode=true&characterEncoding=utf-8
 spring.datasource.password=1234
 spring.datasource.username=root
 
