--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # 设置日志级别
 logging.level.*=DEBUG
 
+server.port=8080
 #databse
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://106.14.195.115:3306/yuya?useUnicode=true&characterEncoding=utf-8
@@ -15,6 +16,9 @@ mybatis.mapper-locations=classpath:mybatis/*.xml
 mybatis.type-aliases-package=com.liug.model.entity
 mybatis.configuration.mapUnderscoreToCamelCase=true
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+spring.http.multipart.maxFileSize=100Mb
+spring.http.multipart.maxRequestSize=100Mb
 
 #redis
 #spring.redis.host=106.14.195.115
