新增登录功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-# 设置日志级别
+
+project.name=\u6D4B\u8BD5\u7CFB\u7EDF
+
+
+# \u8BBE\u7F6E\u65E5\u5FD7\u7EA7\u522B
 logging.level.*=DEBUG
 
 server.port=8080
