--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <jsch.version>0.1.53</jsch.version>
         <mysql.version>5.1.37</mysql.version>
         <mybatis.spring.version>1.3.0</mybatis.spring.version>
+        <UserAgentUtils.version>1.2.4</UserAgentUtils.version>
         <pagehelper.version>4.1.6</pagehelper.version>
         <redis.version>2.9.0</redis.version>
         <shiro.version>1.3.2</shiro.version>
@@ -53,6 +54,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>nl.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>${UserAgentUtils.version}</version>
+        </dependency>
+
         <!--开启test测试-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
