--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,15 @@ project.name=\u6D4B\u8BD5\u7CFB\u7EDF
 
 
 # \u8BBE\u7F6E\u65E5\u5FD7\u7EA7\u522B
-logging.level.*=DEBUG
+logging.level.*=INFO
 
 server.port=8080
 #databse
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://106.14.195.115:3306/yuya?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://106.14.195.115:3306/yuya?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://172.19.2.220:3306/yuya?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://192.168.2.248:3306/yuya?useUnicode=true&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://192.168.31.188:3306/yuya?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://192.168.31.188:3306/yuya?useUnicode=true&characterEncoding=utf-8
 spring.datasource.password=1234
 spring.datasource.username=root
 
