--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ project.name=\u6D4B\u8BD5\u7CFB\u7EDF
 # \u8BBE\u7F6E\u65E5\u5FD7\u7EA7\u522B
 logging.level.*=INFO
 
-server.port=8081
+server.port=3010
 #databse
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://106.14.195.115:3306/yuya?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://yuyahost:3306/yuya?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://172.19.2.220:3306/yuya?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://192.168.2.248:3306/yuya?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://192.168.31.188:3306/yuya?useUnicode=true&characterEncoding=utf-8
